--- a/src/components/categories/CategoryList.css
+++ b/src/components/categories/CategoryList.css
@@ -4,17 +4,29 @@
     align-items: center;
 }
 
-.deleteButton {
+.deleteButton, .editButton {
     margin-left: 10px;
     width: 25px;
     height: 25px;
-    background-color: rgba(255, 0, 0, 0.4);
     border-radius: 3px;
     transition: 500ms;
 }
 
+.deleteButton {
+    background-color: rgba(255, 0, 0, 0.4);
+}
+
+.editButton {
+    background-color: rgba(251, 255, 0, 0.4);
+}
+
 .deleteButton:hover, .confirmDeleteButton:hover {
     background-color: rgba(255, 0, 0, 1);
+    transition: 500ms;
+}
+
+.editButton:hover {
+    background-color: rgba(251, 255, 0, 1);
     transition: 500ms;
 }
 
