User can now subscribe and unsubscribe, barring themselves

--- a/src/components/users/UserCard.css
+++ b/src/components/users/UserCard.css
@@ -11,3 +11,13 @@
     cursor: pointer;
     width: fit-content;
 }
+
+.userCard{
+    display: flex;
+    flex-direction: column;
+}
+
+.subscribeButton, .unsubscribeButton, .thisIsYou {
+    align-self: flex-end;
+    margin: 0 10px 10px 0;
+}
