--- a/src/components/categories/CategoryList.css
+++ b/src/components/categories/CategoryList.css
@@ -54,3 +54,10 @@ dialog {
     top: 50vh;
     border-radius: 5px;
 }
+.categories{
+    border: 2px solid #B36A5E;
+    background-color:#EDEEC0;
+    border-radius: 5px;
+    margin: 2%;
+    padding: 1%;
+}
