--- a/src/components/users/UserCard.css
+++ b/src/components/users/UserCard.css
@@ -1,5 +1,6 @@
 .userCard {
-    border: 2px solid black;
+    border: 2px solid #B36A5E;
+    background-color:#EDEEC0;
     border-radius: 5px;
     margin-bottom: 10px;
     padding-left: 2%;
